[tool.poetry]
name = "har2py"
version = "0.1.0"
description = ""
authors = ["S1M0N38 <bertolottosimone@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Jinja2 = "^2.11.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.6.4"
black = "^20.8b1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
