[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "har2locust/_version.py"
local_scheme = "no-local-version"

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
dummy-variable-rgx = "_.*|^ignored_|^unused_|^kwargs|^environment|^resp"
ignore = ["E402", "E501", "E713", "E731", "E741"]
select = ["E", "F", "W", "UP", "FA102", "I001"]

[tool.ruff.lint.isort]
section-order = ["future", "locust", "standard-library", "third-party", "first-party", "local-folder"]
# Custom selection-order: to ensure locust is imported as first in lucustfiles (for successful gevent monkey patching)

[tool.ruff.lint.isort.sections]
locust = ["locust"]