[metadata]
name = har2locust
license_file = LICENSE
description = Developer friendly load testing framework
authors = 
    "S1M0N38 <bertolottosimone@gmail.com>"
    "CyberW <lars.holmberg@redshirt.se>"
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Topic :: Software Development :: Testing :: Traffic Generation
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Testing :: Traffic Generation
    Topic :: System :: Distributed Computing

[options]
packages = find:
include_package_data = true
zip_safe = false
python_requires = >= 3.7
install_requires =
    locust >= 2.12.3.dev14
    locust-plugins >= 2.6.11

[options.packages.find]
exclude =
    tests

[options.entry_points]
console_scripts =
    har2locust = har2locust.main:cli

[mypy]
# missing type stubs
ignore_missing_imports = True

[mypy-requests.*]
ignore_missing_imports = True

[mypy-locust.dispatch]
no_strict_optional = True
